--- a/css/base.scss
+++ b/css/base.scss
@@ -6496,7 +6496,7 @@ button.close {
 }
 
 body, html, .jumbotron {
-  background-color: #111;
+  background-color: #020202;
 }
 
 body {
@@ -6586,14 +6586,14 @@ body {
 
 .banner {
   background-size: cover;
-  background: url(//img.alicdn.com/imgextra/i1/668252679/TB2i1rIfmVmpuFjSZFFXXcZApXa_!!668252679.jpg) no-repeat;
+  background: url(//wx2.sinaimg.cn/large/005JVuCMly1fcugbg0ckmj31hc07iq6k.jpg) no-repeat;
   background-position-x: center;
   line-height: 270px;
 }
 
 @media screen and (max-width: 768px) {
   .banner {
-    background-image: url(//wx4.sinaimg.cn/mw690/005JVuCMly1fby189qoglj30a004gmyh.jpg);
+    background-image: url(//wx1.sinaimg.cn/large/005JVuCMly1fcuhnd8e4yj30l904ggmh.jpg);
     height: 160px;
     -ms-background-position-y: center;
     background-position-y: center;
