--- a/stylesheets/bootstrap.css
+++ b/stylesheets/bootstrap.css
@@ -1071,7 +1071,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.6;
-  color: #1a1a1a;
+  color: #333;
   background-color: #fff; }
 
 input,
@@ -1313,11 +1313,11 @@ a.text-warning:focus {
   color: #66512c; }
 
 .text-danger {
-  color: #E91E63; }
+  color: #f44336; }
 
 a.text-danger:hover,
 a.text-danger:focus {
-  color: #c1134e; }
+  color: #ea1c0d; }
 
 .bg-primary {
   color: #fff; }
@@ -1372,6 +1372,9 @@ ol {
   ol ol {
     margin-bottom: 0; }
 
+li.wrap {
+  margin-top: 1em; }
+
 .list-unstyled {
   padding-left: 0;
   list-style: none; }
@@ -1400,6 +1403,12 @@ dt {
 dd {
   margin-bottom: 28px;
   margin-left: 0; }
+
+dd.border-right {
+  border-right: 1px solid #eee; }
+  @media screen and (max-width: 768px) {
+    dd.border-right {
+      border-right: 0 none; } }
 
 .dl-horizontal dd:before, .dl-horizontal dd:after {
   content: " ";
@@ -2813,7 +2822,7 @@ select[multiple].input-lg,
   display: block;
   margin-top: 5px;
   margin-bottom: 10px;
-  color: #595959; }
+  color: #737373; }
 
 @media (min-width: 768px) {
   .form-inline .form-group {
@@ -4380,7 +4389,7 @@ a.badge:hover, a.badge:focus {
     margin-right: auto; }
   .thumbnail .caption {
     padding: 9px;
-    color: #1a1a1a; }
+    color: #333; }
 
 a.thumbnail:hover,
 a.thumbnail:focus,
