--- a/stylesheets/bootstrap.css
+++ b/stylesheets/bootstrap.css
@@ -1093,7 +1093,18 @@ a {
     outline-offset: -2px; }
 
 figure {
-  margin: 0; }
+  display: inline-block;
+  border: 1px solid #eeeeee;
+  margin: 0 0 16px; }
+  figure > img {
+    margin: 4px; }
+  figure > figcaption {
+    text-align: center;
+    background-color: #000;
+    color: #fff; }
+    figure > figcaption p {
+      margin: 0;
+      color: #ff9800; }
 
 img {
   vertical-align: middle; }
