--- a/stylesheets/bootstrap.css
+++ b/stylesheets/bootstrap.css
@@ -1095,16 +1095,18 @@ a {
 figure {
   display: inline-block;
   border: 1px solid #eeeeee;
-  margin: 0 0 16px; }
+  margin: 0 0 16px;
+  text-align: center; }
   figure > img {
-    margin: 4px; }
+    display: inline-block;
+    border: 4px solid transparent; }
   figure > figcaption {
-    text-align: center;
-    background-color: #000;
+    background-color: #337ab7;
     color: #fff; }
     figure > figcaption p {
+      border: 4px solid transparent;
       margin: 0;
-      color: #ff9800; }
+      color: #fff; }
 
 img {
   vertical-align: middle; }
