--- a/stylesheets/bootstrap/_scaffolding.scss
+++ b/stylesheets/bootstrap/_scaffolding.scss
@@ -70,19 +70,21 @@ figure {
   display: inline-block;
   border: 1px solid #eeeeee;
   margin: 0 0 16px;
+  text-align: center;
 
   > img {
-    margin: 4px;
+    display: inline-block;
+    border: 4px solid transparent;
   }
 
   > figcaption {
-    text-align: center;
-    background-color: #000;
+    background-color: #337ab7;
     color: #fff;
 
     p {
+      border: 4px solid transparent;
       margin: 0;
-      color: #ff9800;
+      color: #fff;
     }
   }
 }
